# perp-smart-accounts

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  buffer-amm-keypair.json  buffer-margin-keypair.json
migrations/: deploy.ts
programs/chainlink-mock/: Cargo.toml
programs/chainlink-mock/src/: lib.rs
programs/perp-amm/: Cargo.toml
programs/perp-amm/src/: errors.rs  lib.rs  state.rs
programs/perp-amm/src/instructions/: add_authority.rs  admin_deposit.rs  admin_withdraw.rs  claim_fees.rs  claim_rewards.rs  close_pool.rs  close_user_state.rs  deposit.rs  direct_deposit.rs  force_close_user_state.rs  initialize.rs  mod.rs  remove_authority.rs  start_rewards.rs  update_rewards.rs  withdraw.rs
programs/perp-amm/src/util/: mod.rs  update_rewards.rs
programs/perp-margin-accounts/: Cargo.toml
programs/perp-margin-accounts/src/: errors.rs  lib.rs  state.rs
programs/perp-margin-accounts/src/instructions/: add_authority.rs  cancel_withdraw.rs  cancel_withdrawal.rs  claim_fees.rs  deposit.rs  execute_withdraw.rs  execute_withdrawal.rs  initialize.rs  liquidate.rs  mod.rs  remove_authority.rs  request_withdraw.rs  request_withdrawal.rs  update_chainlink_addresses.rs  withdraw.rs
programs/perp-margin-accounts/src/util/: fees.rs  mod.rs  pnl.rs  validate.rs
scripts/: deploy.ts  setAuthority.ts
scripts/perp-amm/: close-pool.ts  close-user-state.ts  force-close-user-state.ts  initialize-pool.ts  mint-mock-usdc.ts  start-rewards.ts
scripts/perp-margin-accounts/: cancel-withdraw.ts  cancel-withdrawal.ts  claim-fees.ts  deposit-margin.ts  execute-withdraw.ts  execute-withdrawal.ts  initialize-margin-account.ts  initialize-margin-vault.ts  liquidate-margin-account.ts  liquidate.ts  request-withdrawal.ts
tests/: amm-admin-deposit.ts  amm-admin-withdraw.ts  amm-claim-fees.ts  amm-claim-rewards.ts  amm-deposit.ts  amm-direct-deposit.ts  amm-start-rewards.ts  amm-withdraw.ts  margin-claim-fees.ts  margin-deposit.ts  margin-initialize.ts  margin-liquidate.ts  margin-withdraw.ts
tests/helpers/: init-amm-program.ts  init-margin-program.ts  wrap-sol.ts
