[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { package = "anchor-lang", git = "https://github.com/coral-xyz/anchor.git", rev = "5727865b65d38736ed05130958e168f9168b6597", features = [
    "init-if-needed",
] }
anchor-spl = { package = "anchor-spl", git = "https://github.com/coral-xyz/anchor.git", rev = "5727865b65d38736ed05130958e168f9168b6597" }
solana-program = "2.2.1"
chainlink_solana = "1.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-lang = { package = "anchor-lang", git = "https://github.com/coral-xyz/anchor.git", rev = "5727865b65d38736ed05130958e168f9168b6597" }
anchor-spl = { package = "anchor-spl", git = "https://github.com/coral-xyz/anchor.git", rev = "5727865b65d38736ed05130958e168f9168b6597" }
