[package]
name = "chainlink-mock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainlink_mock"

[features]
default = ["devnet"]
devnet = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.1" }
solana-program = { version = "2.2.1" }
borsh = "1.5.6"
