[package]
name = "perp_margin_accounts"
version = "0.1.0"
description = "Margin management program for Print3r Perpetual DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perp_margin_accounts"

[features]
default = ["devnet"]
devnet = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "2.2.1"
perp-amm = { path = "../perp-amm", features = ["cpi"] }
