[package]
name = "perp_margin_accounts"
version = "0.1.0"
description = "Margin management program for Print3r Perpetual DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perp_margin_accounts"

[features]
default = ["devnet"]
devnet = []
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
solana-program = { workspace = true }
chainlink_solana = { workspace = true }
perp-amm = { path = "../perp-amm", features = ["cpi"] }
